--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 body {
-    background-color: #1D4221;
+    background-color: #e9b50c;
     color: white;
     font-family: "Mulish", sans-serif;
     display: flex;
@@ -11,7 +11,7 @@ body {
 }
 
 button {
-    background-color: #64A712;
+    background-color: #ece034;
     color: white;
     font-family: "Bai Jamjuree", sans-serif;
 }
