--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 
 body {
-    background-color: #e9b50c;
+    background-color: #1D4221;
     color: white;
-    font-family: "Mulish", sans-serif;
+    font-family: "Bai Jamjuree", sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -11,7 +11,24 @@ body {
 }
 
 button {
-    background-color: #ece034;
+    background-color: #64A712;
     color: white;
     font-family: "Bai Jamjuree", sans-serif;
+}
+
+.passo {
+    display: none;
+}
+
+.passo.ativo {
+    display:block;
+}
+
+main {
+    text-align: center;
+    max-width: 90%;
+}
+
+img {
+    max-width: 90%;
 }
